fix styling issues

--- a/templates/rightBlog.html
+++ b/templates/rightBlog.html
@@ -24,9 +24,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="homepage.html">home</a></li>
-                <li><a href="#">features</a></li>
-                <li><a href="#">pricing</a></li>
-                <li><a href="#">pages</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">sign in</a></li>
                 <button class="sign-up-btn"><a href="#">sign up</a></button>
             </ul>
         </nav>
