--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -24,10 +24,10 @@
                 <div class="line"></div>
             </div>
             <ul class="nav-links">
-                <li><a href="#">home</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="rightBlog.html">blog</a></li>
-                <li><a href="#">sign in</a></li>
+                <li class="link"><a href="#">home</a></li>
+                <li class="link"><a href="#">FAQ</a></li>
+                <li class="link"><a href="rightBlog.html">blog</a></li>
+                <li class="link"><a href="#">sign in</a></li>
                 <button class="sign-up-btn"><a href="#">sign up</a></button>
             </ul>
         </nav>
