add individual blog page

--- a/templates/blogDetails.html
+++ b/templates/blogDetails.html
@@ -25,7 +25,7 @@
             <ul class="nav-links">
                 <li><a href="homepage.html">home</a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="#">blog</a></li>
+                <li><a href="rightBlog.html">blog</a></li>
                 <li><a href="#">sign in</a></li>
                 <button class="sign-up-btn"><a href="#">sign up</a></button>
             </ul>
@@ -41,87 +41,59 @@
             </div>
         </section>
     </header>
-    <section class="main-content">
-        <div class="blog-posts">
-            <div class="blog-post card-1">
-                <img src="../assets/blog/blog-img-1.png" class="blog-image" />
-                <div class="post-info">
-                    <a href="blogDetails.html">
-                        <h4>The master bedroom suite is phenomenaly spacious</h4>
-                    </a>
-                    <div class="stats">
-                        <i class="far fa-calendar-alt"> 16 June, 2018</i>
-                        <i class="far fa-comment-alt"> 22</i>
-                        <i class="far fa-heart"> 32</i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
-                </div>
-            </div>
-            <div class="blog-post card-2">
-                <img src="../assets/blog/blog-img-2.png" class="blog-image" />
-                <div class="post-info">
-                    <a href="blogDetails.html">
-                        <h4>The master bedroom suite is phenomenaly spacious</h4>
-                    </a>
-                    <div class="stats">
-                        <i class="far fa-calendar-alt"> 16 June, 2018</i>
-                        <i class="far fa-comment-alt"> 22</i>
-                        <i class="far fa-heart"> 32</i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
-                </div>
-            </div>
-            <div class="blog-post card-3">
 
-                <img src="../assets/blog/blog-img-3.png" class="blog-image" />
-                <div class="post-info">
-                    <a href="blogDetails.html">
-                        <h4>The master bedroom suite is phenomenaly spacious</h4>
-                    </a>
-                    <div class="stats">
-                        <i class="far fa-calendar-alt"> 16 June, 2018</i>
-                        <i class="far fa-comment-alt"> 22</i>
-                        <i class="far fa-heart"> 32</i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
-                </div>
+    <section class="main-article">
+        <div class="post-content">
+            <div class="post">
 
-            </div>
-            <div class="blog-post card-4">
-                <img src="../assets/blog/blog-img-4.png" class="blog-image" />
-                <div class="post-info">
+                <div class="article">
+                    <img src="../assets/blog/blog_article.png" class="blog-image" />
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
                     </a>
-                    <div class="stats">
-                        <i class="far fa-calendar-alt"> 16 June, 2018</i>
+                    <div class="post-stats">
                         <i class="far fa-comment-alt"> 22</i>
                         <i class="far fa-heart"> 32</i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
-                </div>
-            </div>
-            <div class="blog-post card-5">
-                <img src="../assets/blog/blog-img-5.png" class="blog-image" />
-                <div class="post-info">
-                    <a href="blogDetails.html">
-                        <h4>The master bedroom suite is phenomenaly spacious</h4>
-                    </a>
-                    <div class="stats">
-                        <i class="far fa-calendar-alt"> 16 June, 2018</i>
-                        <i class="far fa-comment-alt"> 22</i>
-                        <i class="far fa-heart"> 32</i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="quote">
+                        <img src="../assets/blog/quotes.svg" />
+                        <p>There’s such a thing as “too much information”, especially for the companies scaling out their sales operations. That’s why Attentive was born in 2015 help sales.</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
-            <div class="pagination">
-                <img src="../assets/blog/pagination.png" />
+            <div class="button-section">
+                <div class="links-container">
+                    <div class="tags">
+                        <h4>Tags:</h4><a href="">Apps</a>
+                    </div>
+                    <div class="share-links">
+                        <h4>Share:</h4>
+                        <ul>
+                            <li><i class="fab fa-facebook-f"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-youtube"></i></li>
+                            <li><i class="fab fa-pinterest-p"></i></li>
+                            <li><i class="fab fa-linkedin-in"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="post-nav">
+                    <button class="prev-post">Previous Test</button>
+                    <button class="next-post">Next Test</button>
+                </div>
+            </div>
+            <div class="comment-section">
+                <h4>Leave a Comment</h4>
+                <form>
+                    <input type="text" id="name" name="name" placeholder="Enter Name">
+                    <input type="text" id="email" name="email" placeholder="Enter Email">
+                    <textarea id="subject" name="subject" placeholder="Enter Comment"></textarea>
+                    <button class="submit-form">Submit</button>
+                </form>
             </div>
         </div>
         <div class="link-panel">
@@ -177,6 +149,7 @@
             </div>
         </div>
     </section>
+
 
     <footer>
         <section class="footer-top">
