--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -98,7 +98,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
         </div>
-        <div class="cards-container">
+        <div class="cards-container container-section4">
             <hr />
             <div class="account-card">
                 <img src="../assets/homepage/account_icon.svg" />
