add pages login and signup

--- a/templates/blogDetails.html
+++ b/templates/blogDetails.html
@@ -89,7 +89,7 @@
             <div class="comment-section">
                 <h4>Leave a Comment</h4>
                 <form>
-                    <input type="text" id="name" name="name" placeholder="Enter Name">
+                    <input type="text" id="c" name="name" placeholder="Enter Name">
                     <input type="text" id="email" name="email" placeholder="Enter Email">
                     <textarea id="subject" name="subject" placeholder="Enter Comment"></textarea>
                     <button class="submit-form">Submit</button>
