make link connection

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,8 +27,8 @@
                 <li class="link"><a href="#">home</a></li>
                 <li class="link"><a href="#">FAQ</a></li>
                 <li class="link"><a href="rightBlog.html">blog</a></li>
-                <li class="link"><a href="#">sign in</a></li>
-                <button class="sign-up-btn"><a href="#">sign up</a></button>
+                <li class="link"><a href="login.html">sign in</a></li>
+                <button class="sign-up-btn"><a href="signup.html">sign up</a></button>
             </ul>
         </nav>
         <section class="main-copy">
