--- a/templates/rightBlog.html
+++ b/templates/rightBlog.html
@@ -26,8 +26,8 @@
                 <li><a href="homepage.html">home</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">blog</a></li>
-                <li><a href="#">sign in</a></li>
-                <button class="sign-up-btn"><a href="#">sign up</a></button>
+                <li><a href="login.html">sign in</a></li>
+                <button class="sign-up-btn"><a href="signup.html">sign up</a></button>
             </ul>
         </nav>
         <section class="main-copy">
