--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="forms-header">
+    <header>
         <nav>
             <div class="logo">
                 <a href="homepage.html">AppSon</a>
@@ -24,35 +24,60 @@
             </div>
             <ul class="nav-links">
                 <li><a href="homepage.html">home</a></li>
-                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="#">FAQ</a></li>
                 <li><a href="rightBlog.html">blog</a></li>
-                <li><a href="#">sign in</a></li>
+                <li><a href="login.html">sign in</a></li>
                 <button class="sign-up-btn"><a href="signup.html">sign up</a></button>
             </ul>
         </nav>
-    </header>
-
-    <section class="login-form">
-        <div class="login-header">
-            <h3>Log In</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="social-media-buttons">
-            <button class="facebook-btn">Facebook</button>
-            <button class="twitter-btn">Twitter</button>
-        </div>
-        <h3 class="alt">or</h3>
-        <form class="login">
-            <input type="text" id="login-email" name="email" placeholder="Email Address">
-            <input type="password" id="password" name="password" placeholder="Password">
-            <div class="alt-links">
-                <a href="" class="password-link">Forgot Password?</a>
-                <a href="signup.html">Create Free Account</a>
+        <section class="main-copy">
+            <div class="main-text">
+                <p>Latest Info</p>
+                <h1>Frequently Asked Questions</h1>
+                <p>Home - FAQs</p>
             </div>
-            <button class="submit-form">Login</button>
-        </form>
-    </section>
+            <div class="main-img">
+                <img src="../assets/blog/Illustration.png" />
+            </div>
+        </section>
+    </header>
+    <section class="main-faq-content">
+        <div class="faq">
+            <div class="sections">
+                <ul class="topic-list">
+                    <li><button>Sales</button></li>
+                    <li><button>Theme Upload</button></li>
+                    <li><button>Upload Requirements</button></li>
+                    <li><button>PSD Template</button></li>
+                    <li><button>Refund Policy</button></li>
+                </ul>
+            </div>
+            <div class="faq-info">
+                <div class="question-1">
+                    <h3>How to upload your Theme?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="question-2">
+                    <h3>Which Files need to upload?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="question-3">
+                    <h3>How many times need to be review?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor.</p>
+                </div>
+                <div class="question-4">
+                    <h3>How to upload your Theme?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="help-buttons">
+                    <h4>Help This Post?</h4>
+                    <button class="yes-btn">Yes</button>
+                    <button class="no-btn">No</button>
+                </div>
+            </div>
 
+        </div>
+    </section>
     <footer>
         <section class="footer-top">
             <div class="footer-info">
