--- a/templates/blogDetails.html
+++ b/templates/blogDetails.html
@@ -89,7 +89,7 @@
             <div class="comment-section">
                 <h4>Leave a Comment</h4>
                 <form>
-                    <input type="text" id="c" name="name" placeholder="Enter Name">
+                    <input type="text" id="name" name="name" placeholder="Enter Name">
                     <input type="text" id="email" name="email" placeholder="Enter Email">
                     <textarea id="subject" name="subject" placeholder="Enter Comment"></textarea>
                     <button class="submit-form">Submit</button>
@@ -154,7 +154,7 @@
     <footer>
         <section class="footer-top">
             <div class="footer-info">
-                <div class="logo">
+                <div class="footer-logo">
                     <a href="#">AppSon</a>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
