--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,7 +24,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="homepage.html">home</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="rightBlog.html">blog</a></li>
                 <li><a href="login.html">sign in</a></li>
                 <button class="sign-up-btn"><a href="#">sign up</a></button>
@@ -45,8 +45,8 @@
         <form class="login">
             <input type="text" id="signup-name" name="fullname" placeholder="Enter full name">
             <input type="text" id="login-email" name="email" placeholder="Enter Email">
-            <input type="password" id="password" name="password" placeholder="    Password">
-            <input type="password" id="password" name="password" placeholder="   Confirm Password">
+            <input type="password" id="password" name="password" placeholder="Password">
+            <input type="password" id="password" name="password" placeholder="Confirm Password">
             <div class="alt-sign-up-link">
                 <p>Already have an account? </p><a href="login.html" class="to-login-link">Log in</a>
             </div>
@@ -57,7 +57,7 @@
     <footer>
         <section class="footer-top">
             <div class="footer-info">
-                <div class="logo">
+                <div class="footer-logo">
                     <a href="#">AppSon</a>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
