--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,7 +25,7 @@
             </div>
             <ul class="nav-links">
                 <li class="link"><a href="#">home</a></li>
-                <li class="link"><a href="#">FAQ</a></li>
+                <li class="link"><a href="FAQ.html">FAQ</a></li>
                 <li class="link"><a href="rightBlog.html">blog</a></li>
                 <li class="link"><a href="login.html">sign in</a></li>
                 <button class="sign-up-btn"><a href="signup.html">sign up</a></button>
@@ -121,10 +121,18 @@
         <div class="pricing-info">
             <h3>Pricing Plan</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
-            <input id="on" class="toggle left" name="toggle" value="monthly" type="radio" checked>
-            <label for="on" class="button-left">Monthly</label>
-            <input id="off" class="toggle right" name="toggle" value="yearly" type="radio">
-            <label for="off" class="button-right">Yearly</label>
+            <div class="info-toggle-btn">
+                <!--
+                <input id="on" class="toggle left" name="toggle" value="monthly" type="radio" checked>
+                <label for="on" class="button-left">Monthly</label>
+                <input id="off" class="toggle right" name="toggle" value="yearly" type="radio">
+                <label for="off" class="button-right">Yearly</label>
+-->
+                <input type="checkbox" id="checkbox" />
+                <label for="checkbox"></label>
+
+            </div>
+        </div>
         </div>
         <div class="pricing-cards">
             <div class="pricing-card1">
