--- a/templates/rightBlog.html
+++ b/templates/rightBlog.html
@@ -24,7 +24,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="homepage.html">home</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="#">blog</a></li>
                 <li><a href="login.html">sign in</a></li>
                 <button class="sign-up-btn"><a href="signup.html">sign up</a></button>
@@ -44,7 +44,7 @@
     <section class="main-content">
         <div class="blog-posts">
             <div class="blog-post card-1">
-                <img src="../assets/blog/blog-img-1.png" class="blog-image" />
+                <img src="../assets/blog/blog-img-1.png" class="blog-thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="blog-post card-2">
-                <img src="../assets/blog/blog-img-2.png" class="blog-image" />
+                <img src="../assets/blog/blog-img-2.png" class="blog-thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -75,7 +75,7 @@
             </div>
             <div class="blog-post card-3">
 
-                <img src="../assets/blog/blog-img-3.png" class="blog-image" />
+                <img src="../assets/blog/blog-img-3.png" class="blog-thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -91,7 +91,7 @@
 
             </div>
             <div class="blog-post card-4">
-                <img src="../assets/blog/blog-img-4.png" class="blog-image" />
+                <img src="../assets/blog/blog-img-4.png" class="blog-thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="blog-post card-5">
-                <img src="../assets/blog/blog-img-5.png" class="blog-image" />
+                <img src="../assets/blog/blog-img-5.png" class="blog-thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -181,7 +181,7 @@
     <footer>
         <section class="footer-top">
             <div class="footer-info">
-                <div class="logo">
+                <div class="footer-logo">
                     <a href="#">AppSon</a>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
