--- a/templates/styles/blog.css
+++ b/templates/styles/blog.css
@@ -162,7 +162,7 @@ nav {
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-.blog-image {
+.blog-thumbnail {
     width: 200px;
     height: auto;
     margin-right: 4%;
@@ -564,6 +564,14 @@ button[type=submit] {
     margin-bottom: 1em;
 }
 
+textarea::placeholder {
+    padding: 1em;
+}
+
+textarea {
+    padding-left: 1em;
+}
+
 .submit-form {
     display: flex;
     margin-right: 0;
@@ -671,6 +679,104 @@ button[type=submit] {
 }
 
 
+/* FAQ section */
+
+.main-faq-content {
+    width: 100%;
+    height: auto;
+}
+
+.faq {
+    width: 65%;
+    margin: 6% auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.sections {
+    width: 30%;
+    margin-right: 3em;
+}
+
+.topic-list {
+    list-style: none;
+}
+
+.topic-list li button {
+    width: 100%;
+    padding: 13px 6px;
+    border: none;
+    border-bottom: 1px solid #dedede;
+    transition: all .3s ease;
+    color: #333333;
+    font-size: 0.9em;
+    font-weight: 700;
+    background: #fff;
+    cursor: pointer;
+    text-align: left;
+}
+
+.topic-list li button:hover {
+    color: #fff;
+    background-color: #0f7bff;
+    border-radius: 7px;
+}
+
+.faq-info {
+    width: 70%
+}
+
+.question-1 h3,
+.question-2 h3,
+.question-3 h3,
+.question-4 h3 {
+    font-size: 1.1em;
+    font-weight: 700;
+    color: #333333;
+    margin-bottom: .7em;
+}
+
+.question-1 p,
+.question-2 p,
+.question-3 p,
+.question-4 p {
+    color: #929292;
+    margin-bottom: .7em;
+    font-size: 0.9em;
+}
+
+.help-buttons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1em;
+}
+
+.help-buttons h4 {
+    font-weight: 700;
+    color: #333333;
+    margin-right: 1em;
+}
+
+.help-buttons button {
+    padding: 4px 12px;
+    border: 1px solid #0f7bff;
+    border-radius: 5px;
+    margin-right: .7em;
+    font-size: .8em;
+    font-weight: 700;
+    color: #0f7bff;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.yes-btn:hover,
+.no-btn:hover {
+    color: #fff;
+    background-color: #0f7bff;
+    transition: all .3s ease;
+}
+
+
 /* WHOLE FOOTER */
 
 footer {
@@ -684,6 +790,24 @@ footer {
     justify-content: space-around;
     margin: 5% auto;
     align-items: center;
+}
+
+.footer-logo {
+    display: flex;
+    align-items: center;
+    margin-left: 0;
+}
+
+.footer-logo a {
+    font-weight: 700;
+    font-size: 1.6em;
+    text-decoration: none;
+    color: #0f7bff;
+    transition: all .2s ease-in-out;
+}
+
+.footer-logo a:hover {
+    transform: scale(1.1);
 }
 
 .footer-links {
@@ -808,6 +932,14 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+input:focus::placeholder {
+    color: transparent;
+}
+
+input[type=password] {
+    padding-left: 1.3em;
 }
 
 @media screen and (min-width: 320px) and (max-width: 960px) {
@@ -944,7 +1076,7 @@ footer {
         margin: 3% 0;
         width: 100%;
     }
-    .blog-image {
+    .blog-thumbnail {
         width: 100px;
         margin-right: 3%;
     }
@@ -1040,6 +1172,9 @@ footer {
         margin-bottom: 1em;
     }
     /* LOGIN-PAGE */
+    .login-form {
+        width: 90%;
+    }
     #login-email,
     #password,
     #signup-name {
@@ -1049,6 +1184,68 @@ footer {
     }
     .facebook-btn {
         margin-right: 0;
+    }
+    /* FAQ section */
+    .main-faq-content {
+        width: 100%;
+        height: auto;
+    }
+    .faq {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+    .sections {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .faq-info {
+        width: 90%;
+        margin: 5% auto;
+    }
+    .question-1 h3,
+    .question-2 h3,
+    .question-3 h3,
+    .question-4 h3 {
+        font-size: 1.1em;
+        font-weight: 700;
+        color: #333333;
+        margin-bottom: .7em;
+    }
+    .question-1 p,
+    .question-2 p,
+    .question-3 p,
+    .question-4 p {
+        color: #929292;
+        margin-bottom: .7em;
+        font-size: 0.9em;
+    }
+    .help-buttons {
+        display: flex;
+        flex-direction: row;
+        margin-top: 1em;
+    }
+    .help-buttons h4 {
+        font-weight: 700;
+        color: #333333;
+        margin-right: 1em;
+    }
+    .help-buttons button {
+        padding: 4px 12px;
+        border: 1px solid #0f7bff;
+        border-radius: 5px;
+        margin-right: .7em;
+        font-size: .8em;
+        font-weight: 700;
+        color: #0f7bff;
+        background-color: #fff;
+        cursor: pointer;
+    }
+    .yes-btn:hover,
+    .no-btn:hover {
+        color: #fff;
+        background-color: #0f7bff;
+        transition: all .3s ease;
     }
     /* FOOTER */
     .footer-top {
